--- a/config.yaml
+++ b/config.yaml
@@ -1,132 +1,69 @@
-baseURL: "https://hugo-profile.netlify.app"
-
+baseURL: "https://access2content.github.io"
 languageCode: "en-us"
-
-title: "Hugo Profile"
-
+title: "Vivek Agrawal"
 theme: hugo-profile
 
-
-
 outputs:
-
   home:
-
     - "HTML"
-
     - "RSS"
-
     - "JSON"
 
   page:
-
     - "HTML"
-
     - "RSS"
-
-
 
 Paginate: 3
 
+# Setup Variables
 enableRobotsTXT: true
-
-# disqusShortname: your-disqus-shortname
-
 # googleAnalytics: G-MEASUREMENT_ID
 
-
-
 markup:
-
   goldmark:
-
     renderer:
-
       unsafe: true
 
-
-
 Menus:
-
   main:
-
     - identifier: blog
-
       name: Blog
-
       title: Blog posts
-
       url: /blogs
-
       weight: 1
 
-    - identifier: gallery
-
-      name: Gallery
-
-      title: Blog posts
-
-      url: /gallery
-
-      weight: 2
-
     #Dropdown menu
-
     # - identifier: dropdown
-
     #   title: Example dropdown menu
-
     #   name: Dropdown
-
     #   weight: 3
 
     # - identifier: dropdown1
-
     #   title: example dropdown 1
-
     #   name: example 1
-
     #   url: /#
-
     #   parent: dropdown
-
     #   weight: 1
 
     # - identifier: dropdown2
-
     #   title: example dropdown 2
-
     #   name: example 2
-
     #   url: /#
-
     #   parent: dropdown
-
     #   weight: 2
 
-
-
 params:
-
   title: "Hugo Profile"
-
   description: Text about my cool site
 
   # staticPath: ""  # The path to serve the static files from
 
   favicon: "/fav.png"
 
-
-
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
-
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
-
   # Note the lack of "" in true, it should be of boolean type.
-
-  useBootstrapCDN: false
-
-
+  useBootstrapCDN: true
 
   # If you want to load dynamically responsive images from Cloudinary
 
@@ -214,7 +151,7 @@ params:
 
     # showBrandLogo: false # Show brand logo in nav bar | default is true
 
-    brandName: "Hugo Profile" # Brand name for the brand | default is the title variable
+    brandName: "Vivek Agrawal" # Brand name for the brand | default is the title variable
 
     disableSearch: false
 
@@ -245,369 +182,127 @@ params:
   # Hero
 
   hero:
-
     enable: true
-
     intro: "Hi, my name is"
-
-    title: "Isabella."
-
+    title: "Vivek Agrawal."
     subtitle: "I build things for the web"
-
-    content: "A passionate web app developer. I tend to make use of modern web technologies to build websites that looks great, feels fantastic, and functions correctly."
-
+    content: "A passionate web developer. I love making products that are robust and scalable with the technologies that suit the product."
     image: /images/hero.svg
 
     bottomImage:
-
       enable: true
-
     # roundImage: true # Make hero image circular | default false
-
     button:
-
       enable: true
-
       name: "Resume"
-
-      url: "#"
-
+      url: "/assets/Vivek Agrawal (Senior Backend).pdf"
       download: true
-
       newPage: false
 
     socialLinks:
-
       fontAwesomeIcons:
-
         - icon: fab fa-github
+          url: https://github.com/access2content
 
-          url: https://example.com
+        - icon: fab fa-linkedin
+          url: https://linkedin.com/in/access2vivek
 
-        - icon: fab fa-x-twitter
-
-          url: https://example.com
-
-      customIcons:
-
-        - icon: /fav.png
-
-          url: "https://example.com"
+      #customIcons:
+        #- icon: /fav.png
+        #url: "https://example.com"
 
 
-
-  # About
 
   about:
-
     enable: true
-
     title: "About Me"
-
     image: "/images/me.png"
 
     content: |-
 
-      I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. 
-
-
-
-      I am currently working on a project that will be used to help people find the best way to get around the city.
+      I am a software developer with a passion for web development. I have a strong interest in the intersection of technology and management.
 
     skills:
-
       enable: true
-
       title: "Here are a few technologies I've been working with recently:"
-
       items:
-
-        - "HTML"
-
-        - "CSS"
-
         - "JavaScript"
-
-        - "React"
-
-        - "Node"
-
+        - "Go"
+        - "Solidity"
+        - "Rust"
+        - "NodeJs"
         - "Express"
 
-
-
-  # Experience
-
   experience:
-
     enable: true
-
     # title: "Custom Name"
 
     items:
-
-      - job: "Senior Software Developer"
-
-        company: "Facebook"
-
-        companyUrl: "https://example.com"
-
-        date: "Jan 2022 - present"
-
+      - job: "Technical Architect"
+        company: "Rejolut Technologies Pvt. Ltd."
+        companyUrl: "https://rejolut.com"
+        date: "Sept 2020 - Aug 2023"
         featuredLink:
-
           enable: true
-
           name: "View the project"
-
           url: "https://example.com"
-
         content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
 
-
-
-      - job: "Software Developer"
-
-        company: "Amazon"
-
-        companyUrl: "https://example.com"
-
-        date: "Sep 2020 - Dec 2021"
-
-        featuredLink:
-
-          enable: true
-
-          url: "https://example.com"
-
+      - job: "Technical Head"
+        company: "Stealth mode Startup"
+        date: "Oct 2023 - Dec 2023"
         info:
-
           enable: true
-
           content: I worked as a software developer for more than one year in Amazon.
-
         content: |
-
           I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
-
-
           - Lead backend developer for a product.
-
           - Created a frontend design for a product.
-
-
-
-      - job: "Junior Software Developer"
-
-        company: "Apple"
-
-        companyUrl: "https://example.com"
-
-        date: "Jan 2020 - Aug 2020"
-
-        info:
-
-          enable: false
-
-        featuredLink:
-
-          enable: true
-
-          url: "https://example.com"
-
-        content: |
-
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
-
-
-          - Lead backend developer for a product.
-
-          - Created a frontend design for a product.
-
-
-
-      - job: "UI/UX Designer"
-
-        company: "Netflix"
-
-        companyUrl: "https://example.com"
-
-        date: "June 2017 - Nov 2019"
-
-        featuredLink:
-
-          enable: true
-
-          url: "https://example.com"
-
-        content: |
-
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
-
-
-          - Lead backend developer for a product.
-
-          - Created a frontend design for a product.
-
-
-
-      - job: "Product Designer"
-
-        company: "Google"
-
-        companyUrl: "https://example.com"
-
-        date: "Feb 2016 - Mar 2017"
-
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
-
-
 
   # Education
 
   education:
-
     enable: true
-
     # title: "Custom Name"
-
     index: false
-
     items:
-
-      - title: "Master of Business Administration"
-
+      - title: "Bachelor of Science (IT)"
         school:
-
-          name: "University of California, Berkeley"
-
-          url: "https://example.org"
-
-        date: "2013 - 2015"
-
-        GPA: "3.8 out of 5.0"
-
+          name: "Manipal University, Manipal"
+        date: "2010 - 2014"
+        GPA: "3.4 out of 4.0"
         content: |-
-
           Extracurricular Activities
-
             - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi.
 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-
-      - title: "Bachelor of Science in Computer Science"
-
+      - title: "12th"
         school:
-
-          name: "Massachusetts Institute of Technology"
-
-          url: "https://example.org"
-
+          name: "Ganga International School, New Delhi"
+          url: "https://www.gangainternationalschool.com/"
         date: "2009 - 2013"
-
-        GPA: "3.9 out of 5.0"
-
         content: |-
-
           I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
-
           - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
-
           - Face mask detection using a single convolutional neural network.
-
-
-
-          Extracurricular Activities
-
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-
-        featuredLink:
-
-          enable: true
-
-          name: "My academic record"
-
-          url: "https://example.com"
-
-      - title: "High School"
-
-        school:
-
-          name: "Thomas Jefferson High School for Science and Technology."
-
-          url: "https://example.org"
-
-        GPA: "4.2 out of 5.0"
-
-        featuredLink:
-
-          enable: true
-
-          url: "https://example.com"
-
-
 
   # Achievements
 
   achievements:
-
     enable: true
-
     # title: "Custom Name"
-
     items:
-
-      - title: Google kickstart runner
-
-        content: I solved all problems with optimal solution.
-
-        url: https://example.com
-
-        image: /images/achievment.jpg
-
-      - title: Facebook Hackathon Winner
-
-        content: Developed a product using Artificial Intelligence.
-
-        image: /images/achievment.jpg
-
-      - title: Hugo Profile
-
-        content: Developed a theme and getting 1K+ downloads per month.
-
-        url: "https://github.com/gurusabarish/hugo-profile"
-
-        image: /images/achievment.jpg
-
-      - title: Microsoft Imagine Runner
-
-        content: We are developed a product which can help others.
-
-      - title: Google Summer of Code
-
-        content: Contributed to a open source project.
-
-        url: https://example.com
-
-
+      - title: Highest achievement recognition
+        content: Awarded with the "Bahubali" award for being the star performer.
+        image: /images/rejolut_award.jpg
 
   # projects
 
   projects:
-
     enable: true
-
     # title: "Custom Name"
-
     items:
-
       - title: Hugo Profile
-
         content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
 
         image: /images/projects/profile.png
