--- a/config.yaml
+++ b/config.yaml
@@ -302,199 +302,81 @@ params:
     enable: true
     # title: "Custom Name"
     items:
-      - title: Hugo Profile
-        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
-
-        image: /images/projects/profile.png
-
-        featured:
-
-          name: Demo
-
-          link: https://hugo-profile.netlify.app
-
+      - title: CoinSwitch Exchange (CSX)
+        content: Team Lead for building a High-Frequency crypto trading backend
+          # featured:
+          #   name: Demo
+          #   link: https://hugo-profile.netlify.app
         badges:
-
-          - "Hugo"
-
-          - "Bootstrap"
-
+          - "Microservices"
+          - "High Frequency Trading"
           - "Javascript"
+          - "Go"
 
-        links:
-
-          - icon: fa fa-envelope
-
-            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
-
-          - icon: fab fa-github
-
-            url: https://github.com/gurusabarish/hugo-profile
-
-          - icon: fab fa-twitter
-
-            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
-
-
-
-      - title: Image Converter
-
-        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
-
-        image: /images/projects/converter.jpg
-
-        featured:
-
-          name: Demo
-
-          link: https://django-converter.herokuapp.com
-
-        badges:
-
-          - "Django"
-
-          - "Bootstrap"
-
-        links:
-
-          - icon: fab fa-github
-
-            url: https://github.com/gurusabarish/converter
-
-
-
-      - title: Hugo Profile V2
-
-        content: A clean and simple Hugo template for personal portfolio and blog.
-
-        image: /images/projects/profile2.jpg
-
-        featured:
-
-          name: Demo V2
-
-          link: https://hugo-profile-2.netlify.app
-
-        badges:
-
-          - "Hugo"
-
-          - "Bootstrap"
-
-          - "Javascript"
-
-        links:
-
-          - icon: fab fa-github
-
-            url: https://github.com/gurusabarish/HugoProfileV2
-
+            #        links:
+            #          - icon: fa fa-envelope
+            #            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
+            #          - icon: fab fa-github
+            #            url: https://github.com/gurusabarish/hugo-profile
+            #          - icon: fab fa-twitter
+            #            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
+            #
 
 
   #Contact
 
   contact:
-
     enable: true
-
     # title: "Custom Name"
-
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-
-    email: gurusabarisha@gmail.com
-
+    email: access2content@gmail.com
     btnName: Mail me
 
     # formspree:
-
     #   enable: true # `contact.email` value will be ignored
-
     #   formId: abcdefgh # Take it from your form's endpoint, like 'https://formspree.io/f/abcdefgh'
-
     #   emailCaption: "Enter your email address"
-
     #   messageCaption: "Enter your message here"
 
-
-
   footer:
-
     recentPosts:
-
       path: "blogs"
-
       count: 3
-
       title: Recent Posts
-
       enable: true
-
       disableFeaturedImage: false
 
-    socialNetworks:
-
-      github: https://github.com
-
-      linkedin: https://linkedin.com
-
-      twitter: https://twitter.com
-
-      instagram: https://instagram.com
-
-      facebook: https://facebook.com
-
-
+      # socialNetworks:
+      #   github: https://github.com
+      #   linkedin: https://linkedin.com
+      #   twitter: https://twitter.com
+      #   instagram: https://instagram.com
+      #   facebook: https://facebook.com
 
   # List pages like blogs and posts
-
   listPages:
-
     disableFeaturedImage: false
 
-
-
   # Single pages like blog and post
-
   singlePages:
-
     readTime:
-
       enable: true
-
       content: "min read"
-
     scrollprogress:
-
       enable: true
-
-
 
   # For translations
-
   terms:
-
     read: "Read"
-
     toc: "Table Of Contents"
-
     copyright: "All rights reserved"
-
     pageNotFound: "Page not found"
-
     emailText: "Check out this site"
 
-
-
   datesFormat:
-
     article: "Jan 2, 2006"
-
     articleList: "Jan 2, 2006"
-
     articleRecent: "Jan 2, 2006"
 
-
-
   #customScripts: -| # You can add custom scripts which will be added before </body> tag
-
   #  <script type="text/javascript"><!-- any script here --></script>
